# cc-session

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  dist-workspace.toml
.beads/: dolt-server.activity  issues.jsonl  metadata.json
.beads/backup/: backup_state.json  comments.jsonl  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl
.claude/: settings.local.json
.claude/commands/: speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md
.github/workflows/: release.yml
.specify/: sdd-traits.json
.specify/templates/: tasks-template.md
demo/: create-fixtures.sh  export-gif.sh  record-demo.sh
specs/001-session-finder/: data-model.md  plan.md  quickstart.md  research.md  review-summary.md  spec.md  tasks.md
specs/002-release-docs-demo/: plan.md  quickstart.md  research.md  review-summary.md  spec.md  tasks.md
specs/003-conversation-viewer/: data-model.md  plan.md  research.md  review-summary.md  spec.md  tasks.md
specs/004-fast-deep-search/: brainstorm-unified-search.md  spec.md
specs/005-unified-search/: data-model.md  plan.md  quickstart.md  research.md  review-summary.md  spec.md  tasks.md
specs/006-viewer-enhancements/: brainstorm.md  data-model.md  plan.md  quickstart.md  research.md  review-summary.md  spec.md  tasks.md
specs/007-seamless-search-ui/: brainstorm.md
src/: clipboard.rs  discovery.rs  filter.rs  lib.rs  main.rs  scriptable.rs  search.rs  session.rs  shell_setup.rs  theme.rs
tests/: discovery_test.rs  filter_test.rs  search_test.rs  session_test.rs
(+15 files in other folders)
