[package]
name = "cc-session"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"
description = "Fast CLI tool for finding and resuming Claude Code sessions"
license = "MIT"
repository = "https://github.com/rhuss/cc-session"
readme = "README.md"
keywords = ["claude", "cli", "tui", "session"]
categories = ["command-line-utilities"]
homepage = "https://github.com/rhuss/cc-session"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
clap = { version = "4.5", features = ["derive"] }
nucleo-matcher = "0.3"
arboard = { version = "3.6", features = ["wayland-data-control"] }
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.2"
dirs = "6.0"
regex = "1"

[profile.release]
lto = true
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
